Implementiert Issue #105 (#153)
* zwischenstand

* zwischenstand2

* Implementiert Issue #105

* Update Text

* Update

* Zwischenstand

* Update SplitBuchungView.java

* Unnötiges if() entfernt und Icon gesetzt