@@ -17,14 +17,17 @@
 package de.jost_net.JVerein.io;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.rmi.RemoteException;
 import java.util.ArrayList;
 
 import de.jost_net.JVerein.Einstellungen;
+import de.jost_net.JVerein.DBTools.DBTransaction;
 import de.jost_net.JVerein.keys.SplitbuchungTyp;
 import de.jost_net.JVerein.rmi.Buchung;
 import de.jost_net.JVerein.rmi.Buchungsart;
 import de.willuhn.datasource.rmi.DBIterator;
+import de.willuhn.jameica.gui.GUI;
 import de.willuhn.util.ApplicationException;
 
 public class SplitbuchungsContainer
@@ -32,8 +35,40 @@ public class SplitbuchungsContainer
   private static ArrayList<Buchung> splitbuchungen = null;
 
   private static int dependencyid = 0;
+  
+  private static Buchung[] buchungen = null;
+  
+  private static int anzahl = 0;
+  
+  private static String text = null; 
 
+  public static void init(Buchung[] bl)
+      throws RemoteException, ApplicationException
+  {
+    anzahl = bl.length;
+    if (anzahl == 1)
+    {
+      buchungen = null;
+      text = "Es wird eine Splitbuchung erzeugt.";
+    }
+    else
+    {
+      buchungen = bl;
+      text = String.format("Es werden %s Splitbuchungen erzeugt.", anzahl);
+    }
+    initiate(bl[0]);
+  }
+  
   public static void init(Buchung b)
+      throws RemoteException, ApplicationException
+  {
+    buchungen = null;
+    anzahl = 1;
+    text = "Es wird eine Splitbuchung erzeugt.";
+    initiate(b);
+  }
+  
+  public static void initiate(Buchung b)
       throws RemoteException, ApplicationException
   {
     splitbuchungen = new ArrayList<>();
@@ -48,7 +83,7 @@ public class SplitbuchungsContainer
     }
     else
     {
-      b.setSplitId(new Long(b.getID()));
+      b.setSplitId(Long.valueOf(b.getID()));
       SplitbuchungsContainer.add(b);
     }
     DBIterator<Buchung> it = Einstellungen.getDBService()
@@ -59,22 +94,7 @@ public class SplitbuchungsContainer
     {
       // Wenn keine Buchung gefunden wurde, gibt es auch keine Gegenbuchung.
       // Dann wird die jetzt erstellt.
-      Buchung b2 = (Buchung) Einstellungen.getDBService()
-          .createObject(Buchung.class, null);
-      b2.setArt(b.getArt());
-      b2.setAuszugsnummer(b.getAuszugsnummer());
-      b2.setBetrag(b.getBetrag() * -1);
-      b2.setBlattnummer(b.getBlattnummer());
-      b2.setBuchungsart(b.getBuchungsartId());
-      b2.setDatum(b.getDatum());
-      b2.setKommentar(b.getKommentar());
-      b2.setKonto(b.getKonto());
-      b2.setMitgliedskonto(b.getMitgliedskonto());
-      b2.setName(b.getName());
-      b2.setSplitId(new Long(b.getID()));
-      b2.setUmsatzid(b.getUmsatzid());
-      b2.setZweck(b.getZweck());
-      b2.setSplitTyp(SplitbuchungTyp.GEGEN);
+      Buchung b2 = getGegenbuchung(b);
       SplitbuchungsContainer.add(b2);
     }
     while (it.hasNext())
@@ -120,7 +140,7 @@ public class SplitbuchungsContainer
       if (b.getSplitTyp().equals(typ) && !b.isToDelete())
       {
         summe = summe.add(new BigDecimal(b.getBetrag()).setScale(2,
-            BigDecimal.ROUND_HALF_UP));
+            RoundingMode.HALF_UP));
       }
     }
     return summe;
@@ -196,6 +216,22 @@ public class SplitbuchungsContainer
       throw new RemoteException(
           "Buchungsarten bei Haupt- und Gegenbuchung müssen identisch sein");
     }
+    try
+    {
+      DBTransaction.starten();
+      handleStore();
+      DBTransaction.commit();
+    }
+    catch (Exception ex)
+    {
+      DBTransaction.rollback();
+      GUI.getStatusBar().setErrorText(ex.getMessage());
+      throw ex;
+    }
+  }
+  
+  public static void handleStore() throws RemoteException, ApplicationException
+  {
     for (Buchung b : get())
     {
       if (b.isToDelete())
@@ -207,9 +243,87 @@ public class SplitbuchungsContainer
         b.store();
       }
     }
+    if (buchungen != null)
+    {
+      Buchung master = null;
+      Buchung gegen = null;
+      Buchung split = null;
+      for (int i = 1; i < anzahl; i++)
+      {
+        master = buchungen[i];
+        master.setSplitTyp(SplitbuchungTyp.HAUPT);
+        master.setSplitId(Long.valueOf(master.getID()));
+        master.store();
+        gegen = getGegenbuchung(master);
+        gegen.store();
+        for (Buchung b : get())
+        {
+          if (!b.isToDelete() && (b.getSplitTyp() == SplitbuchungTyp.SPLIT))
+          {
+            split = getSplitbuchung(master, b);
+            split.store();
+          }
+        }
+      }
+      buchungen = null;
+      splitbuchungen.clear();
+    }
   }
 
   public static int getNewDependencyId() {
     return ++dependencyid;
+  }
+  
+  public static String getText() {
+    return text;
+  }
+  
+  private static Buchung getGegenbuchung(Buchung b) throws RemoteException
+  {
+    Buchung buch = (Buchung) Einstellungen.getDBService()
+        .createObject(Buchung.class, null);
+    buch.setArt(b.getArt());
+    buch.setAuszugsnummer(b.getAuszugsnummer());
+    buch.setBetrag(b.getBetrag() * -1);
+    buch.setBlattnummer(b.getBlattnummer());
+    buch.setBuchungsart(b.getBuchungsartId());
+    buch.setDatum(b.getDatum());
+    buch.setKommentar(b.getKommentar());
+    buch.setKonto(b.getKonto());
+    buch.setMitgliedskonto(b.getMitgliedskonto());
+    buch.setName(b.getName());
+    buch.setProjekt(b.getProjekt());
+    buch.setSplitId(Long.valueOf(b.getID()));
+    buch.setUmsatzid(b.getUmsatzid());
+    buch.setZweck(b.getZweck());
+    buch.setSplitTyp(SplitbuchungTyp.GEGEN);
+    return buch;
+  }
+  
+  private static Buchung getSplitbuchung(Buchung master, Buchung origin) throws RemoteException
+  {
+    Buchung buch = (Buchung) Einstellungen.getDBService().createObject(Buchung.class,
+        null);
+    buch.setAuszugsnummer(master.getAuszugsnummer());
+    buch.setBetrag(origin.getBetrag());
+    buch.setBlattnummer(master.getBlattnummer());
+    buch.setBuchungsart(origin.getBuchungsartId());
+    buch.setDatum(master.getDatum());
+    buch.setKommentar(origin.getKommentar());
+    buch.setKonto(master.getKonto());
+    buch.setMitgliedskonto(master.getMitgliedskonto());
+    buch.setName(master.getName());
+    buch.setProjekt(master.getProjekt());
+    buch.setSplitId(Long.valueOf(master.getID()));
+    buch.setUmsatzid(master.getUmsatzid());
+    buch.setZweck(origin.getZweck());
+    buch.setDependencyId(origin.getDependencyId());
+    buch.setSplitTyp(SplitbuchungTyp.SPLIT);
+    return buch;
+  }
+  
+  public static int getAnzahl() 
+  {
+    return anzahl;
   }
 }
